@@ -296,7 +296,10 @@ None.
         is '+'
       o That interface is assigned to a zone.
       o You have no CONTINUE policies or rules.
-    
+
+4)  'icmp' is now accepted as a synonym for 'ipv6-icmp' in IPv6
+    compilations.
+
 ----------------------------------------------------------------------------
 V I.  P R O B L E M S  C O R R E C T E D  A N D  N E W   F E A T U R E S
       I N   P R I O R  R E L E A S E S
