@@ -16,6 +16,8 @@ Changes in Shorewall 4.4.12
 
 8)  Add COMPLETE option.
 
+9)  Make ICMP a synonym for IPV6-ICMP in ipv6 configs.
+
 Changes in Shorewall 4.4.11
 
 1)  Apply patch from Gabriel.
